Fixed alignment issues

--- a/styles/home.css
+++ b/styles/home.css
@@ -1,3 +1,9 @@
+#homeContainer {
+    padding: 0 8%;
+    padding-top: 60px;
+    margin-top: 67px;
+}
+
 #featProductImage {
     margin-bottom: 25px;
 }
