--- a/styles/mainStyles.css
+++ b/styles/mainStyles.css
@@ -11,6 +11,7 @@ body {
 
 .navbar {
     padding: 10px 8%;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.25);
 }
 
 .navbar-brand {
@@ -53,7 +54,8 @@ body {
 
 .navbarItem {
     padding: 0;
-    margin: 5px 10px;
+    margin: 5px 0;
+    margin-left: 30px;
     border-color: transparent;
     color: black;
     background-color: transparent;
@@ -64,7 +66,8 @@ body {
 #cart {
     padding-left: 20px;
     padding-right: 20px;
-    margin: 0 10px;
+    margin: 0;
+    margin-left: 30px;
     border-color: rgb(92,184,92);
     color: rgb(92,184,92);
     background-color: transparent;
@@ -77,7 +80,3 @@ body {
     float: right;
 }
 
-#bodyContainer {
-    padding: 20px 8%;
-    margin-top: 75px;
-}
