--- a/styles/products.css
+++ b/styles/products.css
@@ -1,4 +1,17 @@
+#productsContainer {
+    padding: 0 8%;
+    padding-top: 30px;
+    margin-top: 37px;
+}
+
+#filterBar {
+    padding: 0 8%;
+    height: 30px;
+    width: 100%;
+    background-color: rgb(245, 245, 245);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.25);
+}
+
 .productCard {
-    margin-top: 15px;
-    margin-bottom: 15px;
+    margin-bottom: 30px;
 }
